<resources>
    <string name="app_name">Scribe</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_legal">Privacy Policy</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_media">Choose Media</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="prompt_name">Full Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_taken">Failed to register, try a different email.</string>
    <string name="error_invalid_password">Please enter a password that is at least 6 characters long.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">The passwords you entered do not match.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="connection_error">Connection Error, failed to retrieve data. Please try again later.</string>
    <string name="no_data_available">You have no posts, take some photos!</string>
    <string name="no_feed_available">You have no new feed, check back later or follow some new users!</string>
    <string name="no_notifications_available">No new notifications, check back later.</string>
    <string name="title_activity_camera">Camera</string>
    <string name="facebook_app_id">631454020338241</string>
    <string name="fb_login_protocol_scheme">631454020338241</string>
    <string name="action_rate">Rate Me!</string>
</resources>
